Time is now displaying!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap'" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="main.js">
+
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <h2>What Is Your Focus For Today?</h2>
     <h2 id="focus" contenteditable="true">Make Cool Projects</h2>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
