Added number 0 function for seconds

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <time id="time">XXXXX PM</time>
+    <time id="time"></time>
     <h1>
-        <span id="greeting">Good Day</span>
+        <span id="greeting"></span>
         <span id="name" contenteditable="true">Kamran</span>
     </h1>
 
