--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <time id="time"></time>
     <h1>
         <span id="greeting"></span>
-        <span id="name" contenteditable="true">Kamran</span>
+        <span id="name" contenteditable="true"></span>
     </h1>
 
     <h2>What Is Your Focus For Today?</h2>
-    <h2 id="focus" contenteditable="true">Make Cool Projects</h2>
+    <h2 id="focus" contenteditable="true"></h2>
 
     <script src="main.js"></script>
 </body>
